Added all service type paths and definitions to swagger
